tests/expectations/compiler/storage/storage_accesses_outside_async_fail.out
Error [ETYC0372034]: `storage write` must be inside a `final fn` or a `final` block.
    --> compiler-test:7:9
     |
   7 |         x = 1;
     |         ^
Error [ETYC0372034]: `storage access` must be inside a `final fn` or a `final` block.
    --> compiler-test:8:17
     |
   8 |         let y = x;
     |                 ^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:9:9
     |
   9 |         vec.push(1);
     |         ^^^^^^^^^^^
Error [ETYC0372034]: `Vector::push` must be inside a `final fn` or a `final` block.
    --> compiler-test:9:9
     |
   9 |         vec.push(1);
     |         ^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:10:17
     |
  10 |         let p = vec.pop();
     |                 ^^^^^^^^^
Error [ETYC0372034]: `Vector::pop` must be inside a `final fn` or a `final` block.
    --> compiler-test:10:17
     |
  10 |         let p = vec.pop();
     |                 ^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:11:17
     |
  11 |         let s = vec.swap_remove(0);
     |                 ^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Vector::swap_remove` must be inside a `final fn` or a `final` block.
    --> compiler-test:11:17
     |
  11 |         let s = vec.swap_remove(0);
     |                 ^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:12:17
     |
  12 |         let l = vec.len();
     |                 ^^^^^^^^^
Error [ETYC0372034]: `Vector::len` must be inside a `final fn` or a `final` block.
    --> compiler-test:12:17
     |
  12 |         let l = vec.len();
     |                 ^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:13:17
     |
  13 |         let g = vec.get(0);
     |                 ^^^^^^^^^^
Error [ETYC0372034]: `Vector::get` must be inside a `final fn` or a `final` block.
    --> compiler-test:13:17
     |
  13 |         let g = vec.get(0);
     |                 ^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:14:9
     |
  14 |         vec.set(0, 0);
     |         ^^^^^^^^^^^^^
Error [ETYC0372034]: `Vector::set` must be inside a `final fn` or a `final` block.
    --> compiler-test:14:9
     |
  14 |         vec.set(0, 0);
     |         ^^^^^^^^^^^^^
